--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,12 @@
-openai
-python-dotenv
-groq
-reportlab
-pillow
-gunicorn
-flask
-flask_cors
-transformers
-torch
-numpy
-tensorflow
-opencv-python-headless
-
+Flask==2.3.3
+flask-cors==4.0.0
+gunicorn==21.2.0
+numpy==1.24.4
+tensorflow-cpu==2.15.0
+transformers==4.37.2
+torch==2.1.2
+pillow==10.2.0
+python-dotenv==1.0.1
+reportlab==4.0.9
+openai==1.30.1
+groq==0.5.0
